# colosseum-openclaw

./: AGENT_TRADING_API.md  MOLTBOOK_POSTS.md  MOLTBOOK_STRATEGY.md  ONBOARDING_SUMMARY.md  POLISH_TASKS.md  README.md  SKILL.md  SPACING_AUDIT.md  TASKS.md  TRADING_API_SUMMARY.md  reset_and_upgrade.sql  supabase-schema.sql
app/: package-lock.json  package.json  seed-volume.sql  tsconfig.json  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/leaderboard/: page.tsx
app/app/profile/: page.tsx
app/components/: FaucetButton.tsx  Footer.tsx  Header.tsx  LoadingSkeleton.tsx  MarketCard.tsx  MarketCardQuick.tsx  MarketCardSimple.tsx  OnboardingModal.tsx  PriceChart.tsx  PriceHistoryChart.tsx  ShareButton.tsx  StatsBar.tsx  ToastProvider.tsx  TradeSuccessModal.tsx  WalletProvider.tsx  index.ts
app/hooks/: useVapor.ts
app/lib/: colosseum.ts  markets.ts  solana.ts  supabase.ts  types.ts  vapor-client.ts  vapor.json
app/public/: skill.md
app/scripts/: generate-historical-data.ts  record-prices.ts
vapor/: Anchor.toml  VOLUME_GENERATOR.md  package-lock.json  package.json
vapor/migrations/: 003_create_price_history.sql
vapor/programs/vapor/: Cargo.toml
vapor/programs/vapor/src/: lib.rs
vapor/scripts/: deploy-markets.ts  generate-volume-raw.js  generate-volume-simple.js  generate-volume-typed.ts  generate-volume-v2.js  generate-volume-v3.js  generate-volume.js  generate-volume.sh  generate-volume.ts  sync-onchain-direct.ts  sync-onchain.ts  volume-simple.ts
vapor/tests/: test-direct.mjs  test-direct.ts  vapor.ts  volume.ts
(+14 files in other folders)
