[package]
name = "vapor"
version = "0.1.0"
description = "Vapor - Colosseum Prediction Markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vapor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
