[package]
name = "vapor"
version = "0.1.0"
description = "Vapor - Colosseum Prediction Markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vapor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
blake3 = "=1.5.5"
